<resources>
    <!-- Global -->
    <string name="app_name">SafeSpace</string>
    <string name="empty_string">Empty String</string>
    <string name="settings_menu">Settings</string>
    <string name="search">Search</string>
    <string name="submit">Submit</string>
    <string name="default_user">Robert</string>
    <string name="fetching_latest_reports">Fetching latest reports…</string>
    <string name="fetching_latest_documents">Fetching latest documents…</string>

    <!-- MainActivity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- MainNavigationActivity -->
    <string name="nav_document">Document</string>
    <string name="nav_report">Report</string>
    <string name="nav_gps">GPS</string>
    <string name="nav_latestrep">Latest reports</string>
    <string name="nav_help">Help</string>
    <string name="nav_settings">Settings</string>

    <!--RegisterUserActivity-->
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>

    <!-- ReportActivity -->
    <string name="incident">Incident…</string>
    <string name="incident_description">Incident description…</string>
    <string name="takePhoto">Photo</string>
    <string name="takenPhoto">Taken Photo</string>
    <string name="takenPhotos">Taken Photos</string>
    <string name="sendReport">Send</string>

    <!-- ProjectActivity -->
    <string name="project_description">Project description…</string>
    <string name="project_dot">Project…</string>

    <!-- DocumentActivity -->
    <string name="project">Project name…</string>
    <string name="document_title">Document title…</string>
    <string name="documentation_sender">Sender:</string>
    <string name="documentation_project_description">Project description…</string>
    <string name="image_description">Image Description</string>

    <!-- HelpActivity -->
    <string name="phone">123456789</string>
    <string name="email">roflxd@kore.no</string>
    <string name="bugreport">Report bug</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="bug_description">Bug description…</string>
    <string name="bug_name">Bug name</string>
    <string name="rofl">rofl</string>

    <!-- DisplayReportActivity -->
    <string name="image_card_display_description">Report image</string>
    <string name="logout">Log Out</string>
    <string name="project1">Project</string>
    <string name="projectSpinner">Project:</string>
    <string name="create">Create</string>

    <!-- SettingsActivity -->
    <string name="lang_nor">Norwegian</string>
    <string name="lang_eng">English</string>
    <string name="gps">GPS</string>
    <string name="ok">OK</string>

    <!-- GPSActivity -->
    <string name="get_location">Get location</string>
    <string name="stop_location">Stop</string>
    <string name="location">Location: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="time_since_last_update">Time since last update: </string>
    <string name="time_at_last_update">Time at last update: </string>
    <string name="fetching_new_location">No previous coordinates found, fetching…</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="ntnu_lab">You are at NTNU LAB building</string>
    <string name="ntnu_main">You are at NTNU Main building</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>

    <!-- RegisterLocationActivity-->
    <string name="location_name">Location name</string>
    <string name="location_lat">Latitude</string>
    <string name="location_log">Longitude</string>
    <string name="location_radius">Radius</string>
    <string name="enter_location">Enter location…</string>

</resources>
