<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kore.ntnu.no.safespace.activities.RegisterUserActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName|textCapSentences|textMultiLine" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/firstNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/firstName"
                android:inputType="textPersonName|textCapSentences" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/lastNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName|textCapSentences" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/confirmPasswordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmPassword" />

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_button_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/register" />

</android.support.constraint.ConstraintLayout>
